<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="promo"
            type="com.marcelinusyoga.atmajayarental.promo.Promo" />
    </data>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"
        android:elevation="3dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="2dp"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/ic_promo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:id="@+id/baris1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_kodePromo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/kode_promo"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_kodePromoIsi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginBottom="3dp"
                        android:text="@{promo.kode_promo}"
                        android:textColor="@color/black"
                        android:textSize="11sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/baris2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_jenisPromo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/jenis_promo"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_jenisPromoIsi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="27dp"
                        android:layout_marginBottom="3dp"
                        android:text="@{promo.jenis_promo}"
                        android:textColor="@color/black"
                        android:textSize="11sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/baris3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_keterangan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/keterangan"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_keteranganIsi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="34dp"
                        android:layout_marginBottom="3dp"
                        android:text="@{promo.keterangan}"
                        android:textColor="@color/black"
                        android:textSize="11sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/baris4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_potonganHarga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/potongan_harga"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_potonganHargaIsi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:layout_marginBottom="3dp"
                        android:text="@{promo.potongan_harga}"
                        android:textColor="@color/black"
                        android:textSize="11sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>